force-app/main/default/objects/Account/fields/Exclude_From_Missing_Payment_Mail_List__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Missing_Payment_Mail_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Missing Payment Mail List</label>
    <type>Checkbox</type>
</CustomField>