force-app/main/default/objects/Account/fields/Follow_Up_Prior_Months__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Prior_Months__c</fullName>
    <description>This field value will be used to determine after how many months the first follow-up is required.</description>
    <label>Follow Up Prior Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>