force-app/main/default/objects/Account/recordTypes/Trustee_Office.recordType-meta.xml
<RecordType>
    <fullName>Trustee_Office</fullName>
    <active>true</active>
    <description>Trustee Office</description>
    <label>Trustee Office</label>
</RecordType>